# Teste-Tecnico-Power-Data

./: .coverage  .coveragerc  .env.example  Dockerfile  README.md  deploy.sh  pyproject.toml  requirements.txt
app/: main.py
app/core/: logging.py  security.py
app/routes/: films.py  people.py  planets.py  starships.py
app/schemas/: people.py
app/services/: swapi_service.py
app/static/: style.css
app/templates/: health.html
app/tests/: conftest.py  test_auth.py  test_films.py  test_main.py  test_routes.py  test_swapi_service.py
