[project]
name = "teste-tecnico-power-data"
version = "0.1.0"
description = "API RESTful em FastAPI que atua como wrapper da SWAPI (Star Wars API) - Teste Técnico Power Data"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.128.0",
    "requests>=2.32.5",
    "uvicorn>=0.40.0",
]
