[project]
name = "teste-tecnico-power-data"
version = "0.1.0"
description = "API RESTful em FastAPI que atua como wrapper da SWAPI (Star Wars API) - Teste Técnico Power Data"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "coverage>=7.13.2",
    "fastapi>=0.128.0",
    "httpx>=0.28.1",
    "pytest>=9.0.2",
    "pytest-cov>=7.0.0",
    "python-decouple>=3.8",
    "requests>=2.32.5",
    "uvicorn>=0.40.0",
]
